fixing the device widths on all of the divs. now shows full width on mobile. fixed title width for various screen sizes. fixed the card widths on smaller sizes. made the right div slightly bigger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
     background-color: #26C485;
     text-shadow: 4px 2px rgb(56, 56, 56);
     margin: 0 auto;
-    width: 60%;
+    width: 100%;
     height: 100px;
     padding-top: 5px;
 }
@@ -32,6 +32,10 @@
 
 .text-size {
     font-size: 12px;
+}
+
+.shadow-text {
+    text-shadow: 3px 3px 3px black;
 }
 
 #rest-div {
